# lib-gif-glide-extension-using-frame-sequence

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/pince/gif/framesequencedemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/pince/gif/framesequencedemo/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/pince/gif/framesequencedemo/: ExampleUnitTest.kt
frame-sequence/: CMakeLists.txt  build.gradle
frame-sequence/src/androidTest/java/com/pince/gif_glide_extension_using_frame_sequence/: ExampleInstrumentedTest.java
frame-sequence/src/main/: AndroidManifest.xml
frame-sequence/src/main/java/com/pince/gif_glide_extension_using_frame_sequence/: GifDecoder.kt  GifDrawableResource.kt  GlideGifModule.kt
frame-sequence/src/main/res/values/: strings.xml
frame-sequence/src/test/java/com/pince/gif_glide_extension_using_frame_sequence/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
